--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.738.0",
     "@aws-sdk/lib-storage": "^3.738.0",
+    "@firebase/auth": "^1.10.6",
     "axios": "^1.7.9",
     "elevenlabs": "^1.50.4",
+    "firebase": "^11.9.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
